--- a/package.json
+++ b/package.json
@@ -20,18 +20,25 @@
   },
   "homepage": "https://github.com/dootMaster/app-template-git-sites#readme",
   "dependencies": {
+    "axios": "^0.21.4",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
+    "knex": "^0.95.11",
+    "multer": "^1.4.3",
+    "pg": "^8.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.8",
-    "@babel/preset-env": "^7.14.8",
+    "@babel/core": "^7.15.5",
+    "@babel/preset-env": "^7.15.6",
     "@babel/preset-react": "^7.14.5",
     "babel-loader": "^8.2.2",
     "html-webpack-plugin": "^5.3.2",
-    "nodemon": "^2.0.12",
-    "webpack": "^5.47.1",
-    "webpack-cli": "^4.7.2",
+    "nodemon": "^2.0.13",
+    "webpack": "^5.54.0",
+    "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^3.11.2"
   }
 }
